<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tsoap.sat.septre.AddRoutesDetailFragments"
    android:orientation="vertical"
    android:background="@color/white_pressed"
    android:weightSum="6">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="16dp"
                android:weightSum="1">


                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="16dp"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_event_black_24dp"
                    />

                <TextView
                    android:id="@+id/select_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:hint="@string/select_date"
                    android:maxLines="1"
                    android:numeric="decimal"
                    android:layout_marginBottom="2dp"
                    android:shadowColor="@color/primaryColor"
                    android:singleLine="true"
                    android:textColor="@color/primaryColorDark"
                    android:textColorHint="@color/decoratorColor"
                    android:textSize="14sp"
                    android:theme="@style/MyEditTextTheme" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/background"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:weightSum="1">


                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="16dp"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_location_on_black_24dp"
                    />

                <EditText
                    android:id="@+id/source_point"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:hint="@string/start_point"
                    android:maxLines="1"
                    android:numeric="decimal"
                    android:shadowColor="@color/primaryColor"
                    android:singleLine="true"
                    android:textColor="@color/primaryColorDark"
                    android:textColorHint="@color/decoratorColor"
                    android:textSize="14sp"
                    android:theme="@style/MyEditTextTheme" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:weightSum="1">


                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="16dp"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_location_on_black_24dp"
                    />

                <EditText
                    android:id="@+id/destination_point"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:hint="@string/destination_point"
                    android:maxLines="1"
                    android:numeric="decimal"
                    android:shadowColor="@color/primaryColor"
                    android:singleLine="true"
                    android:textColor="@color/primaryColorDark"
                    android:textColorHint="@color/decoratorColor"
                    android:textSize="14sp"
                    android:theme="@style/MyEditTextTheme" />

            </LinearLayout>



            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="@string/earnings_details"/>


            <LinearLayout
                android:id="@+id/earningPerRoute_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:weightSum="1">


                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="16dp"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_credit_card_black_24dp"
                    />

                <EditText
                    android:id="@+id/earningPerRoute"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:hint="@string/earnings"
                    android:maxLines="1"
                    android:numeric="decimal"
                    android:shadowColor="@color/primaryColor"
                    android:singleLine="true"
                    android:textColor="@color/primaryColorDark"
                    android:textColorHint="@color/decoratorColor"
                    android:textSize="14sp"
                    android:theme="@style/MyEditTextTheme" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:weightSum="1">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ic_traffic_black_24dp" />

                <EditText
                    android:id="@+id/traffic_fine"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:hint="@string/traffic_rule_fines"
                    android:maxLines="1"
                    android:numeric="decimal"
                    android:shadowColor="@color/primaryColor"
                    android:singleLine="true"
                    android:textColor="@color/primaryColorDark"
                    android:textColorHint="@color/decoratorColor"
                    android:textSize="14sp"
                    android:theme="@style/MyEditTextTheme" />

            </LinearLayout>


            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="@string/account_type"/>

            <Spinner
                android:id="@+id/account_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingTop="5dp"
                />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="@string/income_status"/>

            <Spinner
                android:id="@+id/incomeStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:entries="@array/incomeStatus"
                />

        </LinearLayout>
    </ScrollView>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="2"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:background="@drawable/white_card"
        android:weightSum="1"
        >

        <Button
            android:id="@+id/routes_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/submit"
            android:textColor="@android:color/background_dark"
            android:textSize="14sp"
            android:textStyle="bold"
            style="?android:borderlessButtonStyle"/>

    </LinearLayout>


</LinearLayout>



