<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tsoap.sat.septre.AddRoutesDetailFragments">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:weightSum="2">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="16dp"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_account_balance_black_24dp"
                    />

                <EditText
                    android:id="@+id/accountName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1.4"
                    android:hint="@string/account_name"
                    android:gravity="bottom"
                    android:layout_marginRight="16dp"
                    android:maxLines="1"
                    android:shadowColor="@color/primaryColor"
                    android:singleLine="true"
                    android:textColor="@color/primaryColorDark"
                    android:textColorHint="@color/decoratorColor"
                    android:textSize="14sp"
                    android:theme="@style/MyEditTextTheme" />

                />

                <Spinner
                    android:id="@+id/color_code_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:layout_marginTop="10dp"
                    />

            </LinearLayout>


            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="10sp"
                android:text="@string/work_type"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ic_local_taxi_black_24dp" />

                <Spinner
                    android:id="@+id/work_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:entries="@array/worktype"
                    />

            </LinearLayout>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/organisation_type"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ic_language_black_24dp" />

                <Spinner
                    android:id="@+id/organisation_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:entries="@array/oragnisationType"
                    />

            </LinearLayout>




        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@drawable/white_card"
        android:weightSum="1">

        <Button
            android:id="@+id/submitbtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/submit"
            android:textColor="@android:color/background_dark"
            android:textSize="14sp"
            android:textStyle="bold"
            style="?android:borderlessButtonStyle"/>



    </LinearLayout>


</RelativeLayout>



